# mech

./: CMakeLists.txt  J2.cpp  J2.hpp  adjoint.cpp  assembly.cpp  assembly.hpp  control.cpp  control.hpp  dbcs.cpp  disc.cpp  disc.hpp  displacement.cpp  displacement.hpp  do-config.sh  elastic.cpp  elastic.hpp  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  finedisc.cpp  finedisc.hpp  first_pk.cpp  first_pk.hpp  functional.cpp  kinematics.cpp  kinematics.hpp  linalg.cpp  linalg.hpp  mechanics.cpp  mechanics.hpp  model.cpp  model.hpp  mresidual.cpp  mresidual.hpp  neohookean.cpp  neohookean.hpp  (+11 more)
mesh/cube/: cube.txt
mesh/notch2D/: Makefile  notch2D-serial0.smb  notch2D.cpp  notch2D.dmg  notch2D.txt  notch2D0.smb  notch2D1.smb  notch2D2.smb  notch2D3.smb
mesh/square/: square.txt
mesh/square-small/: square  square-serial0.smb  square.cpp  square.geo  square.msh  square0.smb  square1.smb  square2.smb  square3.smb
